[FIX] Strange image cropping in IE (Podio bug47); Print styles for Swiper (#34)
* [FIX] Cropping text of autoplaying slider

* [FIX] Strange image cropping in IE (Podio bug47)

--- a/dev/styles/main/general.less
+++ b/dev/styles/main/general.less
@@ -107,6 +107,26 @@
 
 
 
+// =============================================================================
+// ======== Additional styling for Fluid Styled Content extension, fix IE  =====
+// =============================================================================
+.IE {
+    .ce-gallery,
+    .ce-gallery .ce-outer,
+    .ce-gallery .ce-inner,
+    .ce-gallery .ce-column {
+        max-width: 100%;
+    }
+    .ce-gallery figure,
+    .ce-gallery figcaption {
+        display: block;
+    }
+}
+// -----------------------------------------------------------------------------
+// -----------------------------------------------------------------------------
+
+
+
 // =================================
 // ======== Browsehappy, fix IE ====
 // =================================
