--- a/dev/styles/main/print.less
+++ b/dev/styles/main/print.less
@@ -3,9 +3,6 @@
 // =========================================================
 
 @media print {
-    // a[href]:after {
-    //     content: none;
-    // }
     .header-middle-wrp {
         height: auto;
     }
@@ -20,6 +17,14 @@
     }
     p a {
         text-decoration: underline !important;
+    }
+    .swiper-container-android .swiper-slide,
+    .swiper-wrapper {
+        -webkit-transform: translate3d(0, 0, 0) !important;
+        -moz-transform: translate3d(0, 0, 0) !important;
+        -o-transform: translate(0, 0) !important;
+        -ms-transform: translate3d(0, 0, 0) !important;
+        transform: translate3d(0, 0, 0) !important;
     }
     a[href^="#"],
     a[href^="javascript:"],
@@ -68,6 +73,10 @@
     .img-slider__caption {
         position: relative;
         width: 100%;
+
+        @media (max-width: 700px) {
+            max-width: 580px;
+        }
     }
     .img-slider__caption-p {
         padding: 0;
